拆分代码，修改数据输入的相关代码
1、将代码拆分成多个rs文件；
2、数据输入，由原来的 ips-v4.txt 改为任意名称的txt文件(程序自动选择读取到的第一个txt文件)，排除 output.txt 文件。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,18 +2,15 @@
 name = "curl_cdn-cgi_trace_rust"
 version = "0.1.0"
 edition = "2021"
-rustc-version = "1.75.0"
+rustc-version = "1.75.0+"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4.20"
-chrono = "0.4.31"
+log = "0.4.22"
+chrono = "0.4.38"
 ipnetwork = "0.20.0"
 rand = "0.8.5"
-url = "2.4.1"
+url = "2.5.2"
 threadpool = "1.8.1"
 fern = "0.6.2"
-
-[target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "target-feature=+crt-static"]
