--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,24 @@ rustc-version = "1.75.0+"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4.22"
+clap = { version = "4.5.21", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = "0.12"
+tokio = { version = "1", features = ["full"] }
+threadpool = "1.8.1"
 chrono = "0.4.38"
 ipnetwork = "0.20.0"
 rand = "0.8.5"
-url = "2.5.2"
-threadpool = "1.8.1"
-fern = "0.6.2"
+url = "2.5.3"
+log = "0.4.22"
+fern = "0.7.0"
+csv = "1.3.1"
+
+# [[bin]]
+# name = "app"
+# path = "test/demo1.rs"
+
+# [[bin]]
+# name = "main"
+# path = "src/main.rs"
